Support running builds with custom toolchain version
See gh-24402