@@ -16,18 +16,18 @@
 
 package org.springframework.boot.build;
 
-import java.io.File;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 import io.spring.javaformat.gradle.FormatTask;
 import io.spring.javaformat.gradle.SpringJavaFormatPlugin;
+import org.gradle.api.Action;
 import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
@@ -44,6 +44,9 @@ import org.gradle.api.tasks.bundling.Jar;
 import org.gradle.api.tasks.compile.JavaCompile;
 import org.gradle.api.tasks.javadoc.Javadoc;
 import org.gradle.api.tasks.testing.Test;
+import org.gradle.jvm.toolchain.JavaLanguageVersion;
+import org.gradle.jvm.toolchain.JavaToolchainService;
+import org.gradle.jvm.toolchain.JavaToolchainSpec;
 import org.gradle.testretry.TestRetryPlugin;
 import org.gradle.testretry.TestRetryTaskExtension;
 
@@ -145,9 +148,16 @@ class JavaConventions {
 
 	private void configureTestConventions(Project project) {
 		project.getTasks().withType(Test.class, (test) -> {
-			withOptionalBuildJavaHome(project, (javaHome) -> test.setExecutable(javaHome + "/bin/java"));
 			test.useJUnitPlatform();
 			test.setMaxHeapSize("1024M");
+			withOptionalJavaToolchain(project).ifPresent((action) -> {
+				JavaToolchainService service = getJavaToolchainService(project);
+				test.getJavaLauncher().set(service.launcherFor(action));
+				// See https://github.com/spring-projects/spring-ldap/issues/570
+				List<String> arguments = Arrays.asList("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED",
+						"--illegal-access=warn");
+				test.jvmArgs(arguments);
+			});
 		});
 		project.getPlugins().withType(JavaPlugin.class, (javaPlugin) -> project.getDependencies()
 				.add(JavaPlugin.TEST_RUNTIME_ONLY_CONFIGURATION_NAME, "org.junit.platform:junit-platform-launcher"));
@@ -167,34 +177,56 @@ class JavaConventions {
 	private void configureJavadocConventions(Project project) {
 		project.getTasks().withType(Javadoc.class, (javadoc) -> {
 			javadoc.getOptions().source("1.8").encoding("UTF-8");
-			withOptionalBuildJavaHome(project, (javaHome) -> javadoc.setExecutable(javaHome + "/bin/javadoc"));
+			withOptionalJavaToolchain(project).ifPresent((action) -> {
+				JavaToolchainService service = getJavaToolchainService(project);
+				javadoc.getJavadocTool().set(service.javadocToolFor(action));
+			});
 		});
 	}
 
 	private void configureJavaCompileConventions(Project project) {
 		project.getTasks().withType(JavaCompile.class, (compile) -> {
 			compile.getOptions().setEncoding("UTF-8");
-			withOptionalBuildJavaHome(project, (javaHome) -> {
+			compile.setSourceCompatibility("1.8");
+			compile.setTargetCompatibility("1.8");
+			withOptionalJavaToolchain(project).ifPresent((action) -> {
+				JavaToolchainService service = getJavaToolchainService(project);
+				compile.getJavaCompiler().set(service.compilerFor(action));
 				compile.getOptions().setFork(true);
-				compile.getOptions().getForkOptions().setJavaHome(new File(javaHome));
-				compile.getOptions().getForkOptions().setExecutable(javaHome + "/bin/javac");
+				// See https://github.com/gradle/gradle/issues/15538
+				List<String> forkArgs = Arrays.asList("--add-opens",
+						"jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED");
+				compile.getOptions().getForkOptions().getJvmArgs().addAll(forkArgs);
 			});
 			List<String> args = compile.getOptions().getCompilerArgs();
 			if (!args.contains("-parameters")) {
 				args.add("-parameters");
 			}
-			if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+			if (!project.hasProperty("toolchainVersion") && JavaVersion.current() == JavaVersion.VERSION_1_8) {
 				args.addAll(Arrays.asList("-Werror", "-Xlint:unchecked", "-Xlint:deprecation", "-Xlint:rawtypes",
 						"-Xlint:varargs"));
 			}
 		});
 	}
 
-	private void withOptionalBuildJavaHome(Project project, Consumer<String> consumer) {
-		String buildJavaHome = (String) project.findProperty("buildJavaHome");
-		if (buildJavaHome != null && !buildJavaHome.isEmpty()) {
-			consumer.accept(buildJavaHome);
+	private JavaToolchainService getJavaToolchainService(Project project) {
+		return project.getExtensions().getByType(JavaToolchainService.class);
+	}
+
+	private Optional<Action<JavaToolchainSpec>> withOptionalJavaToolchain(Project project) {
+		String version = (String) project.findProperty("toolchainVersion");
+		if (version == null) {
+			return Optional.empty();
 		}
+		int toolchainVersion = Integer.parseInt(version);
+		if (toolchainVersion >= 8) {
+			Action<JavaToolchainSpec> action = (javaToolchainSpec) -> {
+				JavaLanguageVersion languageVersion = JavaLanguageVersion.of(toolchainVersion);
+				javaToolchainSpec.getLanguageVersion().convention(languageVersion);
+			};
+			return Optional.of(action);
+		}
+		return Optional.empty();
 	}
 
 	private void configureSpringJavaFormat(Project project) {
